# ece-gy-9183-mlops-project

./: .gitignore  Dockerfile.jupyter  README.md  docker-compose.dummy.yml  docker-compose.yml  requirements.txt
archive/: Makefile  run_ansible_setup.sh  run_deployment_workflow.sh  run_terraform.sh
archive/devops/ansible/: run_initial_etl.yaml  run_initial_training.yaml  schedule_training.yaml  vm_setup.yaml
archive/devops/k8s/monitoring/: README.md  prometheus-values.yaml  servicemonitor-fastapi.yaml
archive/devops/scripts/: setup_infra.sh
archive/devops/terraform/: outputs.tf  variables.tf
chameleon_devops/: README.md  docker-compose.yml
chameleon_devops/ansible/: ansible.cfg  inventory.ini  site.yml
chameleon_devops/ansible/group_vars/all/: secrets.yml
chameleon_devops/ansible/playbooks/: deploy-argocd-apps.yml
chameleon_devops/ansible/templates/: argocd-app-mlops.yaml.j2
chameleon_devops/charts/inference/: values.yaml
chameleon_devops/charts/inference/templates/: ingress.yaml  rollout.yaml  service-canary.yaml  service-stable.yaml
chameleon_devops/config/: grafana.ini  prometheus.yml
chameleon_devops/k8s/argocd/: applicationset.yaml  ghcr-secret.yaml
chameleon_devops/k8s/base/: argocd-service.yaml  argocd_mlops.yaml  deployment.yaml  kustomization.yaml  service.yaml
chameleon_devops/k8s/overlays/canary/: kustomization.yaml  patch-deployment.yaml
chameleon_devops/k8s/overlays/production/: kustomization.yaml  patch-deployment.yaml
chameleon_devops/k8s/overlays/staging/: kustomization.yaml  patch-deployment.yaml
chameleon_devops/k8s/workflows/: drift-configmap.yml  drift-detection-cronworkflow.yml  retraining-workflow.yml
chameleon_devops/manifests/argocd/: app-inference-dev.yaml  app-inference-prod.yaml  app-inference-staging.yaml
chameleon_devops/terraform/: clouds.yaml  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
chameleon_mlops/ansible/: argocd.yml  deploy_services.yml  install_docker.yml  inventory.ini  k8s.yml  post_k8s.yml  pre-k8s.yml
chameleon_mlops/k8s/base/: argocd-workflows.yaml
chameleon_mlops/k8s/workflows/: configmap-drift-config.yaml  drift-detection-cronworkflow.yaml  retraining_workflow.yaml
chameleon_mlops/kvm/ansible/: deploy_services.yml
chameleon_mlops/kvm/terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
chameleon_mlops/terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
dashboard/: Dockerfile  api_service.py  app.py  data_processor.py  pyproject.toml
data/: FeatureEngineeringAd.py  FeatureEngineeringOld.py  PLAN.md  README.md  Transform.py  features_all_crops.csv  features_corn_advanced.csv
data/hrrr_combined/19003/: FIPS_19003.csv
data/hrrr_combined/19007/: FIPS_19007.csv
data/hrrr_combined/19009/: FIPS_19009.csv
data/hrrr_combined/19015/: FIPS_19015.csv
data/hrrr_combined/19017/: FIPS_19017.csv
data/hrrr_combined/19031/: FIPS_19031.csv
data/hrrr_combined/19037/: FIPS_19037.csv
data/hrrr_combined/19039/: FIPS_19039.csv
data/hrrr_combined/19051/: FIPS_19051.csv
data/hrrr_combined/19053/: FIPS_19053.csv
data/hrrr_combined/19057/: FIPS_19057.csv
data/hrrr_combined/19059/: FIPS_19059.csv
data/hrrr_combined/19063/: FIPS_19063.csv
data/hrrr_combined/19067/: FIPS_19067.csv
data/hrrr_combined/19073/: FIPS_19073.csv
data/hrrr_combined/19087/: FIPS_19087.csv
data/hrrr_combined/19089/: FIPS_19089.csv
data/hrrr_combined/19091/: FIPS_19091.csv
data/hrrr_combined/19095/: FIPS_19095.csv
data/hrrr_combined/19101/: FIPS_19101.csv
data/hrrr_combined/19107/: FIPS_19107.csv
data/hrrr_combined/19117/: FIPS_19117.csv
data/hrrr_combined/19129/: FIPS_19129.csv
data/hrrr_combined/19131/: FIPS_19131.csv
data/hrrr_combined/19135/: FIPS_19135.csv
data/hrrr_combined/19137/: FIPS_19137.csv
data/hrrr_combined/19143/: FIPS_19143.csv
data/hrrr_combined/19159/: FIPS_19159.csv
data/hrrr_combined/19173/: FIPS_19173.csv
data/hrrr_combined/19175/: FIPS_19175.csv
data/hrrr_combined/19177/: FIPS_19177.csv
data/hrrr_combined/19179/: FIPS_19179.csv
data/hrrr_combined/19185/: FIPS_19185.csv
data/hrrr_combined/19189/: FIPS_19189.csv
data/hrrr_combined/19195/: FIPS_19195.csv
data_pipeline/: DNLDVDRV.py  calculate_ndvi.ipynb  fetch.ipynb  final_USDA_data.ipynb  final_hrrr.ipynb  final_ndvi_data.ipynb
devops/ansible/: deploy_services.yaml  run_initial_etl.yaml
devops/docker-compose/: prometheus.yml
devops/scripts/: setup_infra.sh  setup_infra_chi_tacc.sh
devops/terraform/: cloud-init-mlflow.yaml  main.tf
etl_pipeline/: Dockerfile  Readme.md  docker-compose-etl.yml  docker-compose.yml  drive_to_swift_etl.py  pyproject.toml  transform.py
etl_pipeline/archive/: calculate_ndvi.ipynb  combined_hrrr.py
etl_pipeline/extract/: Dockerfile  extract.py
etl_pipeline/transform/: Dockerfile  pyproject.toml  transform.py
feature_serving/: Dockerfile  config.py  data_loader.py  main.py  models.py  pyproject.toml
model_serving/: .dockerignore  Dockerfile  README.md  app.py  drift.py  entrypoint.sh  exceptions.py  logs.txt  metrics.py  mlflow_loader.py  predict.py  pyproject.toml  schemas.py
model_serving/tests/: test_app.py  test_predict.py
model_training/: .env.jupyter  01_control_centre.ipynb  Dockerfile  Dockerfile.jupyter  README.md  changes.md  config.py  data_fetch.py  enhanced_training_pipeline.ipynb  fetch_data.py  generate_dummy_assets.py  inference.py  load_data.py  model.ipynb  model.py  modelRegressor.ipynb  model_training.py  promote_model.py  pyproject.toml  swift_data_loader.py  train.py  train_job.py  utils.py
model_training/archive/: Inference.ipynb  best_model.pt  enhanced_training_pipeline.ipynb  model.py  modelRegressor.ipynb
model_training/archive2/: JUPYTER.md  fetch_data [depricated].py  predict.py  swift_data_loader.py  train_job.py
monitoring/: Dockerfile  locustfile.py
monitoring/grafana/dashboards/: agriyield-services-overview.json  dashboard_provider.yaml  default.json
monitoring/prometheus/: prometheus.yml
workspace/: README.md
(+21 files in other folders)
