[tool.poetry]
name = "CropDashboard"
version = "0.1.0"
description = "Dashboard for CropNet Yield Prediction"
authors = ["Ali Hamza <alihamza@chameleon.com>"]
packages = [{include = "dashboard"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.2.5"
pandas = "^2.2.3"
plotly = "^6.0.1"
requests = "^2.32.3"
streamlit = "^1.45.0"
prometheus-client = "^0.19.0" # Core client library for custom metrics


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"