# model_training/pyproject.toml
[tool.poetry]
name = "agri-yield-training"
version = "0.1.0"
description = "Containerized training job for the AgriYield prediction model"
authors = ["Your Name <you@example.com>"]
license = "MIT" # Or your preferred license
readme = "README.md" # Optional
packages = [{include = "model_training"}] # Include the model_training package

[tool.poetry.dependencies]
python = "^3.9" # Match your Dockerfile base image
torch = "^2.1.0" # Use your specific Torch version or a compatible range
pandas = "^2.1.0" # Use your specific Pandas version or a compatible range
numpy = "^1.26.0" # Use your specific Numpy version or a compatible range
# matplotlib = "^3.8.0" # Not needed in a job script, keep in notebooks
tqdm = "^4.66.0"
scikit-learn = "^1.3.0" # For metrics (sklearn)
mlflow = "^2.8.0" # Use a version compatible with Swift artifact storage
# openstacksdk for reading data from Swift and interacting with MLflow artifacts
openstacksdk = "^0.60.0" # Use appropriate versions
structlog = "^23.2.0" # Using structlog for structured logging
pydantic-settings = "^2.0.3" # For parsing environment variables easily
pydantic = "^2.5.0" # Pydantic is a dependency of pydantic-settings, good to list if used elsewhere

[tool.poetry.group.dev.dependencies]
# Add dev dependencies here if needed (e.g., pytest, flake8)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"